...
    <string name="color">Color</string>
    <string name="example_target">e.g. 15</string>
    <string name="measurable_short_example">e.g. Run</string>
    <string name="measurable_question_example">e.g. How many miles did you run today?</string>
    <string name="measurable_units_example">e.g. miles</string>
    <string name="every_month">Every month</string>
    <string name="validation_cannot_be_blank">Cannot be blank</string>
    <string name="today">Today</string>
    <string name="enter">Enter</string>
    <string name="no_habits">No habits found</string>
    <string name="no_numerical_habits">No measurable habits found</string>
    <string name="no_boolean_habits">No yes-or-no habits found</string>
    <string name="increment">Increment</string>
...
